--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body, html {
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('./img/img-pc.png') no-repeat center center;
+    background: url('./img/img-pc.webp') no-repeat center center;
     background-size: cover;
     filter: blur(0.7px);
     display: flex;
@@ -66,6 +66,7 @@ body, html {
     .loading-message p {
         font-size: 16px;
     }
+
 }
 
 /* Responsividade para dispositivos pequenos */
@@ -82,7 +83,21 @@ body, html {
 
     /* Alterando a imagem de fundo no modo mobile */
     .overlay {
-        background: url('./img/img-movel.png') no-repeat center center;
+        background: url('./img/img-movel.webp') no-repeat center center;
         background-size: cover;
+    }
+}
+
+/* Adicionando uma imagem WebP para otimização */
+picture img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+/* Otimização de cache para as imagens */
+@media (prefers-reduced-motion: reduce) {
+    .loader {
+        animation: none;
     }
 }
